Integración con Tweet funcionando

--- a/src/resources/messages.properties
+++ b/src/resources/messages.properties
@@ -5,6 +5,9 @@ App.7=Lines:
 App.8=Error reading file
 App.9=End
 
+twitterConf.ko=Error reading twitter configuration
+twitter.init.ko=Twitter no inicializado
+
 fichero.sw.ok=Fichero SW leido
 fichero.sw.ko=Error leyendo Fichero SW
 fichero.sw.parser.ko=Error parseando Fichero de SW
